--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,12 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/main.ts",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["prisma/schema.prisma", "node_modules/.prisma/**/*"] }
+      "src": "dist/main.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "src/main.ts" }
+    { "src": "/(.*)", "dest": "dist/main.js" }
   ]
 }
