--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "dist/main.js",
-      "use": "@vercel/node"
-    }
+    { "src": "src/main.vercel.ts", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/main.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"]
-    }
+    { "src": "/(.*)", "dest": "src/main.vercel.ts" }
   ]
 }
